# scard

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac
etc/: Makefile.am  scard.ini
share/www/: Makefile.am
src/: Makefile.am
src/include/: Makefile.am  conf.h  config.h.in  eca.h  env.h  http.h  main.h  posix+bsd.h  tools.h
src/scard/: Makefile.am  conf.c  eca.c  env.c  hash+.c  hash.c  http.c  init.c  log.c  main.c  signal.c  tools.c
